Improves mailer text

--- a/app/views/offers/new_purchase.html.slim
+++ b/app/views/offers/new_purchase.html.slim
@@ -17,7 +17,7 @@ section.purchase
                 span.offer-info__coordinator__avatar style="background-image: url(#{@offer.deliver_coordinator.avatar});"
                 span.offer-info__coordinator__name
                   p = @offer.deliver_coordinator.name
-                  .small Coordenador(a) de Entrega
+                  .small Coordenador de Entrega
               p As compras devem ser retiradas nas seguintes data e local (por motivos de segurança, o número do endereço só será fornecido para os participantes da oferta):
               ul
                 li
