--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,15 +22,5 @@ html
     = yield
     = render 'partials/footer'
 
-    javascript:
-      WebFontConfig = { google: { families: [ 'Roboto:400,500,700,300:latin', 'Oswald:400,300,700:latin' ] } };
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })();
+    = render 'partials/webfont'
     = render 'partials/analytics' if Rails.env.production?
