--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -32,7 +32,11 @@ section.offers
                       span.glyphicon.glyphicon-grain
                       = offer.producer.name
                   .card__action
-                    = link_to 'COMPRAR', new_purchase_offer_path(offer), class: 'btn btn--md btn--block btn--yellow'
+                    - if offer.remaining == 0
+                      = link_to 'OFERTA FINALIZADA', offer_path(offer), class: 'btn btn--md btn--block btn--disable'
+                    - else
+                      = link_to 'COMPRAR', new_purchase_offer_path(offer), class: 'btn btn--md btn--block btn--yellow'
+
                   .card__progress
                     .pull-left.text-left
                       .span
