--- a/app/assets/stylesheets/organisms/_header.scss
+++ b/app/assets/stylesheets/organisms/_header.scss
@@ -1,14 +1,71 @@
 .header {
   height: 100px;
   width: 100%;
-  position: absolute;
-  z-index: 100;
+  z-index: 1000;
   background-color: $brown-tribo;
 }
 
 .header__logo {
-  display: block;
-  height: 100px;
-  width: 310px;
-  padding: 23px 30px 17px 30px;
+  img {
+    padding-top: 9px;
+
+    @media screen and (max-width: 420px) {
+      width: 230px;
+      padding-top: 14px;
+    }
+  }
+}
+
+.navbar-default {
+  background: transparent;
+  border: 0;
+
+  .navbar-nav > li > a {
+    padding: 40px 10px;
+    color: white;
+    &:hover {
+      color: white;
+      text-decoration: underline;
+    }
+  }
+
+  .navbar-toggle {
+    border: 2px solid $brown-dark;
+    background-color: transparent;
+    margin-top: 28px;
+    padding: 12px 10px;
+
+    &:focus,
+    &:hover {
+      background-color: $brown-dark;
+    }
+
+    .icon-bar {
+      background-color: $yellow-medium;
+    }
+  }
+
+  .navbar-collapse {
+    border-color: $brown-dark;
+    box-shadow: none;
+
+    &.in,
+    &.collapsing {
+      margin-top: 22px;
+      background: $brown-tribo;
+    }
+
+    ul {
+      margin: 0 -15px;
+    }
+
+    .navbar-nav > li > a {
+      padding: 30px 15px;
+
+      &:hover {
+        background-color: $brown-dark;
+        text-decoration: none;
+      }
+    }
+  }
 }
