Improves about page grid

--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -3,7 +3,7 @@
     .row
       .col-sm-12
         .row
-          .col-md-3
+          .col-sm-6.col-md-3
             .about__card
               .about__arrow
                 .arrow__block
@@ -19,7 +19,7 @@
                   li CONHEÇA O PRODUTOR QUE FEZ A OFERTA.
                   li CLIQUE NO BOTÃO: "COMPRAR".
 
-          .col-md-3
+          .col-sm-6.col-md-3
             .about__card
               .about__arrow
                 .arrow__block
@@ -34,7 +34,7 @@
                   li PREENCHA OS CAMPOS COM OS DADOS REQUISITADOS.
                   li CLIQUE NO BOTÃO: "CONTINUAR PARA CONFIRMAÇÃO".
 
-          .col-md-3
+          .col-sm-6.col-md-3
             .about__card
               .about__arrow
                 .arrow__block
@@ -50,7 +50,7 @@
                   li ENVIE O COMPROVANTE DE PAGAMENTO PARA CONFIRMAR A COMPRA.
                   small.text--yellow IMPORTANTE: A COMPRA SOMENTE SERÁ CONFIRMADA APÓS O ENVIO DO COMPROVANTE DE PAGAMENTO.
 
-          .col-md-3
+          .col-sm-6.col-md-3
             .about__card
               .about__arrow
                 .arrow__block
