--- a/app/assets/stylesheets/organisms/_hero.scss
+++ b/app/assets/stylesheets/organisms/_hero.scss
@@ -7,6 +7,7 @@
   min-height: 510px;
   height: 510px;
   display: table;
+  z-index: 1;
 
   .col-centered {
     background: rgba(0, 0, 0, 0.6) none repeat scroll 0% 0%;
