Fixes wrong coordinator address in purchase confirmated mailer

--- a/app/views/purchase_mailer/confirmed_payment.html.slim
+++ b/app/views/purchase_mailer/confirmed_payment.html.slim
@@ -13,7 +13,7 @@ h3
 p
   | DATA E HORÁRIO: #{@purchase.offer.delivery_time_range}
   br
-  | LOCAL: #{@purchase.offer.deliver_coordinator.partial_address}
+  | LOCAL: #{@purchase.offer.deliver_coordinator.address}
   br
   | COORDENADOR DE ENTREGA: #{@purchase.offer.deliver_coordinator.name}
 
