Improves confirmed purchase mailer

--- a/app/views/purchase_mailer/confirmed_payment.html.slim
+++ b/app/views/purchase_mailer/confirmed_payment.html.slim
@@ -16,6 +16,10 @@ p
   | LOCAL: #{@purchase.offer.deliver_coordinator.address}
   br
   | COORDENADOR DE ENTREGA: #{@purchase.offer.deliver_coordinator.name}
+  br
+  | TELEFONE: #{@purchase.offer.deliver_coordinator.phone}
+  br
+  | EMAIL: #{@purchase.offer.deliver_coordinator.email}
 
 p * Você tem até 24h antes do horário da coleta para indicar uma pessoa para buscar sua cota em seu lugar. Essa pessoa deverá portar documento de identificação com foto.
 hr
