Adds coordinator email to sucess page

--- a/app/views/purchases/success.html.slim
+++ b/app/views/purchases/success.html.slim
@@ -40,3 +40,6 @@ section.purchase
               li
                 span.glyphicon.glyphicon-phone
                 span = @purchase.offer.deliver_coordinator.phone
+              li
+                span.glyphicon.glyphicon-envelope
+                span = @purchase.offer.deliver_coordinator.email
