--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -23,19 +23,23 @@ section.offers
                 article.card
                   .card__image style="background-image: url(#{offer.image.url});"
                   .card__info
-                    p.card__info__price
-                      span = number_to_currency offer.coordinator_tax + offer.operational_tax + offer.value
+                    span.card__info__price
+                      = number_to_currency offer.coordinator_tax + offer.operational_tax + offer.value
                       span.small
-                        |  / valor de 1 cota
+                        |  / 1 cota
+                      span.pull-right
+                        span.glyphicon.glyphicon-calendar
+                        = offer.collect_starts_at.strftime('%d/%m')
                     h1.card__info__title.title--up = link_to offer.title, offer_path(offer)
                     span.card__info__place
                       span.glyphicon.glyphicon-grain
                       = offer.producer.name
+
                   .card__action
                     - if offer.remaining <= 0
                       = link_to 'OFERTA FINALIZADA', offer_path(offer), class: 'btn btn--md btn--block btn--disable'
                     - else
-                      = link_to 'COMPRAR', new_purchase_offer_path(offer), class: 'btn btn--md btn--block btn--yellow'
+                      = link_to 'DETALHES', offer_path(offer), class: 'btn btn--md btn--block btn--yellow'
 
                   .card__progress
                     .pull-left.text-left
