Improves home page title

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -23,15 +23,15 @@ section.offers
                 article.card
                   .card__image style="background-image: url(#{offer.image.url});"
                   .card__info
-                    span.card__info__price
+                    span.card__info__price title="Preço total da cota"
                       = number_to_currency offer.coordinator_tax + offer.operational_tax + offer.value
                       span.small
                         |  / 1 cota
-                      span.pull-right
+                      span.pull-right title="Data da Coleta"
                         span.glyphicon.glyphicon-calendar
                         = offer.collect_starts_at.strftime('%d/%m')
                     h1.card__info__title.title--up = link_to offer.title, offer_path(offer)
-                    span.card__info__place
+                    span.card__info__place title="Nome do Produtor"
                       span.glyphicon.glyphicon-grain
                       = offer.producer.name
 
