--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -27,6 +27,7 @@ section.offer-header
                 = link_to 'OFERTA FINALIZADA', '', class: 'btn btn--md btn--block btn--disable'
               - else
                 = link_to 'COMPRAR', new_purchase_offer_path(@offer), class: 'btn btn--md btn--block btn--yellow'
+                = link_to '+1 Carrinho', add_to_cart_offer_path(@offer), method: :post, class: 'btn btn--md btn--block btn--green'
 
 section.offer-info
   .container
