--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -40,7 +40,6 @@ section.offers
                       = link_to 'OFERTA FINALIZADA', offer_path(offer), class: 'btn btn--md btn--block btn--disable'
                     - else
                       = link_to 'DETALHES', offer_path(offer), class: 'btn btn--md btn--block btn--yellow'
-
                   .card__progress
                     .pull-left.text-left
                       .span
@@ -53,6 +52,32 @@ section.offers
                       .small restantes
                     .progress[title="Cotas adquiridas"]
                       .progress-bar.progress-bar-yellow[role="progressbar" aria-valuenow="#{progress_bar_percentage(offer)}" aria-valuemin="0" aria-valuemax="100" style="width: #{progress_bar_percentage(offer)}%"]
+
+section.old-offers
+  .container
+    .row
+      .col-sm-12.col-md-10.col-centered
+        h2.text--green
+          span.title--up Ofertas Passadas
+        .row
+          - @finished_offers.each do |offer|
+            .col-sm-6.col-md-4
+              article.card
+                .card__image style="background-image: url(#{offer.image.url});"
+                .card__info
+                  span.card__info__price title="Preço total da cota"
+                    = number_to_currency offer.coordinator_tax + offer.operational_tax + offer.value
+                    span.small
+                      |  / 1 cota
+                    span.pull-right title="Data da Coleta"
+                      span.glyphicon.glyphicon-calendar
+                      = offer.collect_starts_at.strftime('%d/%m')
+                  h1.card__info__title.title--up = link_to offer.title, offer_path(offer)
+                  span.card__info__place title="Nome do Produtor"
+                    span.glyphicon.glyphicon-grain
+                    = offer.producer.name
+                .card__action
+                  = link_to 'OFERTA FINALIZADA', offer_path(offer), class: 'btn btn--md btn--block btn--disable'
 
 section.about
   .container
