Moves checkouts#update to purchases#update
- Improves seeds.rb
- Creates method to calculate total of order
- Creates method to calcular total of purchase

--- a/app/views/pages/cart.html.slim
+++ b/app/views/pages/cart.html.slim
@@ -1,3 +1,6 @@
+h1 Desejar acessar suas compras passadas?
+p = link_to 'Compras passadas', purchases_path
+
 h1 Meu carrinho de compras
 
 - if session[:shopping_cart].any?
