--- a/app/views/checkouts/checkout.html.slim
+++ b/app/views/checkouts/checkout.html.slim
@@ -1,56 +1,74 @@
-h1 Pagamento
+section.purchase
+  h1.text-center Pagamento
+  - if session[:shopping_cart].any?
+    .container
+      .row
+        .col-md-10.col-centered
+          .purchase-table
+            .purchase-info
+              - total = 0
+              - session[:shopping_cart].each do |item|
+                - offer = Offer.find(item['id'])
+                - total += offer.value*item['quantity']
+                .offer-info__products
+                  .row
+                    .col-md-12
+                      strong = offer.title
+                  .row
+                    .col-md-4
+                      span.btn.btn--md Unidade
+                    .col-md-4
+                      span.btn.btn--md Quantidade
+                    .col-md-4
+                      span.btn.btn--md Total
+                  .row
+                    .col-md-4
+                      span.btn.btn--md = number_to_currency offer.value
+                    .col-md-4.text-center
+                      span.btn.btn--md = item['quantity']
+                    .col-md-4
+                      span.btn.btn--md = number_to_currency offer.value*item['quantity']
 
+            .purchase-form
+              = form_tag process_payment_path, id: 'js-payment-form' do
+                = hidden_field_tag :token, nil, readonly: true, size: 64
 
-h3 Resumo da sua compra
+                h3 1. Selecione a opção de pagamento
+                .btn-group.payment-method-btn-group data-toggle="buttons"
+                  label#js-credit-card-checkbox-label.btn.btn-default.active Cartão de crédito
+                  = check_box_tag :method, '', true, id: 'js-payment-method-credit-card', style: 'display: none;'
 
-- total = 0
-table.table-hover
-  tr
-    th Oferta
-    th Quantidade
-    th Preço Unitário
-    th Preço Total
-  - session[:shopping_cart].each do |item|
-    - offer = Offer.find(item['id'])
-    - total += offer.value*item['quantity']
-    tr
-      td = offer.title
-      td = item['quantity']
-      td = number_to_currency offer.value
-      td = number_to_currency offer.value*item['quantity']
+                  label#js-bank-slip-checkbox-label.btn.btn-default Boleto Bancário
+                  = check_box_tag :method, 'bank_slip', false, id: 'js-payment-method-bank-slip', style: 'display: none;'
 
-h3 = "Total: #{number_to_currency total}"
+                #js-creditcard-form
+                  h3 2. Preencha as Informações
+                  p style="color:red;" = flash[:charge_messages]
+                  p.js-errors style="color: red;"
+                  .wrapper
+                    .input-group.nmb_a
+                      .icon.ccic-brand
+                      = text_field_tag :cc_number, nil, autocomplete: 'off', placeholder: 'Número do cartão', class: 'js-credit-card-number', data: { iugu: 'number'}
+                    .input-group.nmb_b
+                      .icon.ccic-cvv
+                      = text_field_tag :cvv, nil, autocomplete: 'off', placeholder: 'CVV', class: 'js-credit-card-cvv', data: { iugu: 'verification_value'}
+                    .input-group.nmb_c
+                      .icon.ccic-name
+                      = text_field_tag :full_name, nil, autocomplete: 'off', placeholder: 'Titular do Cartão', class: 'js-credit-card-card-name', data: { iugu: 'full_name'}
+                    .input-group.nmb_d
+                      .icon.ccic-exp
+                      = text_field_tag :card_expiration, nil, autocomplete: 'off', placeholder: 'MM/AA', class: 'js-credit-card-card-expiration', data: { iugu: 'expiration'}
 
-= form_tag process_payment_path, id: 'js-payment-form' do
-  = hidden_field_tag :token, nil, readonly: true, size: 64
+                h3 3. Aceite os termos
+                .form-acceptance
+                  = check_box_tag :terms, '1', false, class: 'js-terms', style: "margin-right: 10px;"
+                  = label_tag :terms, 'Eu aceito os termos de compra'
 
-  .btn-group.payment-method-btn-group data-toggle="buttons"
-    label#js-credit-card-checkbox-label.btn.btn-default.active Cartão de crédito
-    // leave value blank, this is correct
-    = check_box_tag :method, '', true, id: 'js-payment-method-credit-card', style: 'display: none;'
+                h3 4. Finalize a compra!
+                = submit_tag 'Pagar', class: 'js-submit-payment btn btn--md btn--green', disabled: true
 
-    label#js-bank-slip-checkbox-label.btn.btn-default Boleto Bancário
-    = check_box_tag :method, 'bank_slip', false, id: 'js-payment-method-bank-slip', style: 'display: none;'
-
-  #js-creditcard-form
-    p style="color:red;" = flash[:charge_messages]
-    p.js-errors style="color: red;"
-    .wrapper
-      .input-group.nmb_a
-        .icon.ccic-brand
-        = text_field_tag :cc_number, nil, autocomplete: 'off', placeholder: 'Número do cartão', class: 'js-credit-card-number', data: { iugu: 'number'}
-      .input-group.nmb_b
-        .icon.ccic-cvv
-        = text_field_tag :cvv, nil, autocomplete: 'off', placeholder: 'CVV', class: 'js-credit-card-cvv', data: { iugu: 'verification_value'}
-      .input-group.nmb_c
-        .icon.ccic-name
-        = text_field_tag :full_name, nil, autocomplete: 'off', placeholder: 'Titular do Cartão', class: 'js-credit-card-card-name', data: { iugu: 'full_name'}
-      .input-group.nmb_d
-        .icon.ccic-exp
-        = text_field_tag :card_expiration, nil, autocomplete: 'off', placeholder: 'MM/AA', class: 'js-credit-card-card-expiration', data: { iugu: 'expiration'}
-
-    .form-acceptance
-      = check_box_tag :terms, '1', false, class: 'js-terms'
-      = label_tag :terms, 'Eu aceito os termos de compra'
-  .submit-div
-    = submit_tag 'Pagar', class: 'js-submit-payment btn btn--md btn--green', disabled: true
+  - else
+    .container
+      .row
+        .col-md-10.col-centered
+          h2.text-center Não há produtos no seu carrinho
