--- a/app/assets/stylesheets/organisms/_payment_form.scss
+++ b/app/assets/stylesheets/organisms/_payment_form.scss
@@ -56,6 +56,7 @@
     right: 0px;
 }
 #js-creditcard-form input {
+  color: white !important;
     background: none;
     display: block;
     width: 100%;
