--- a/app/views/purchase_mailer/pending_payment.html.slim
+++ b/app/views/purchase_mailer/pending_payment.html.slim
@@ -4,7 +4,7 @@ h1 Oi, #{@purchase.user.name}!
   p Você efetuou a compra de cotas de produtos através da opção de cartão de crédito.
 - elsif @purchase.payment_method == 'bank_slip'
   p
-    | Você efetuou a compra da cota de produtos "#{@offer.title}" através da opção de boleto bancário.
+    | Você efetuou a compra de cotas de produtos através da opção de boleto bancário.
     | Caso ainda não tenha efetuado o pagamento do boleto ou tenha perdido o acesso ao mesmo,
     |  #{link_to 'clique aqui', @purchase.invoice_url}
 
