Move Cart logic to a separate class

--- a/app/views/pages/cart.html.slim
+++ b/app/views/pages/cart.html.slim
@@ -1,19 +1,16 @@
 section.purchase
   h1.text-center Meu carrinho de compras
-  - if session[:shopping_cart].any?
+  - if cart_session.items_count > 0
     .container
       .row
         .col-md-10.col-centered
           .purchase-table
             .purchase-info
-              - total = 0
-              - session[:shopping_cart].each do |item|
-                - offer = Offer.find(item['id'])
-                - total += offer.value*item['quantity']
+              - cart_session.cart_list.each do |item|
                 .offer-info__products
                   .row
                     .col-md-12
-                      strong = offer.title
+                      strong = item.offer.title
                   .row
                     .col-md-3
                       span.btn.btn--md Unidade
@@ -24,18 +21,18 @@ section.purchase
                       span.btn.btn--md Total
                   .row
                     .col-md-3
-                      span.btn.btn--md = number_to_currency offer.value
+                      span.btn.btn--md = number_to_currency item.piece_price
                     .col-md-2
-                      span = link_to '-1', remove_from_cart_offer_path(offer), method: :delete, class: 'btn btn--md btn--yellow'
+                      span = link_to '-1', remove_from_cart_offer_path(item.offer), method: :delete, class: 'btn btn--md btn--yellow'
                     .col-md-2
-                      span.btn.btn--md = item['quantity']
+                      span.btn.btn--md = item.quantity
                     .col-md-2
-                      span = link_to '+1', add_to_cart_offer_path(offer), method: :post, class: 'btn btn--md btn--yellow'
+                      span = link_to '+1', add_to_cart_offer_path(item.offer), method: :post, class: 'btn btn--md btn--yellow'
                     .col-md-3
-                      span.btn.btn--md = number_to_currency offer.value*item['quantity']
+                      span.btn.btn--md = number_to_currency item.total_price
 
             .purchase-form
-              h3 = "Total: #{number_to_currency total}"
+              h3 = "Total: #{number_to_currency cart_session.total_value}"
               p = link_to 'Ir para o Pagamento', checkout_path, class: 'btn btn--md btn--green'
               p = link_to 'Limpar meu carrinho', clean_cart_path,
                   class: 'btn btn--md btn--yellow',
