Fixes image name for og:image on homepage

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,5 +1,5 @@
 - meta og: { title: "Tribo Viva", description: "A Tribo Viva é um novo sistema de consumo, formado por cidadãos e produtores locais de alimentos orgânicos. Nossa rede exclui atravessadores, viabilizando o acesso contínuo e sustentável a uma alimentação com mais saúde, inclusão social e melhor custo-benefício para todos os envolvidos.",
-             url: request.url, image: "#{asset_url('logo.png')}" }
+             url: request.url, image: "#{asset_url('logo-triboviva.png')}" }
 
 section.hero
  .hero__slogan.text-center.text--white
